--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,14 @@
 RewriteEngine on
 RewriteBase /
+
+RewriteCond %{HTTP_HOST} ^vi10\.tk$
+RewriteCond %{REQUEST_URI} !/www/
+RewriteRule ^(.*)$ /www/$1 [L]
+
+RewriteCond %{HTTP_HOST} ^www\.vi10\.tk$
+RewriteCond %{REQUEST_URI} !/www/
+RewriteRule ^(.*)$ /www/$1 [L]
+
 RewriteCond %{HTTP_HOST} !^www\.vi10\.tk$
 RewriteCond %{HTTP_HOST} (www\.)?(.*)\.vi10\.tk$
 RewriteCond %{REQUEST_URI} !abcd8908/
